--- a/src/template.hbs
+++ b/src/template.hbs
@@ -1,6 +1,8 @@
 <div class="country-container">
     <h1 class="country-title">{{name}}</h1>
-    <img class="country-img" src="{{flag}}" alt="{{name}}">
+    <div class="country-img">
+        <img src="{{flag}}" alt="{{name}}">
+    </div>
     <pclass="country-text">Capital: {{capital}}</p>
         <pclass="country-text">Population: {{population}}</p>
             <ul class="country-list">Languages:
