--- a/src/common.css
+++ b/src/common.css
@@ -3,6 +3,8 @@ body {
 }
 
 .input-control {
+  min-width: 150px;
+  height: 20px;
   color: black;
 }
 
@@ -13,5 +15,16 @@ img {
 }
 
 .country-img {
-  width: 320px;
+  width: 240px;
+  height: auto;
+}
+
+.container-js {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.country-container {
+  display: block;
+  width: calc((100% - 15px) / 5);
 }
