--- a/src/common.css
+++ b/src/common.css
@@ -4,19 +4,9 @@ body {
 
 .input-control {
   min-width: 150px;
+  margin-left: 20px;
   height: 20px;
-  color: black;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-.country-img {
-  width: 240px;
-  height: auto;
+  border: 1px solid black;
 }
 
 .container-js {
@@ -26,5 +16,19 @@ img {
 
 .country-container {
   display: block;
-  width: calc((100% - 15px) / 5);
+}
+
+.country-title {
+  text-align: center;
+}
+
+.country-content {
+  display: flex;
+}
+
+img {
+  display: block;
+  width: 540px;
+  height: auto;
+  margin-left: 50px;
 }
