--- a/src/template.hbs
+++ b/src/template.hbs
@@ -1,6 +1,5 @@
 {{#each this}}
 
-
 <div class="country-container">
 
     <h2 class="country-title">{{name}}</h2>
@@ -21,7 +20,7 @@
         </div>
 
         <div class="country-img">
-            <img src="{{flag}}" alt="{{name}}">
+            <img src="{{flag}}" alt={{name}}>
         </div>
     </div>
 
