--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   line-height: 1.7;
-  background-color: #f1eaea;
+  background-color: #e1e1e1;
 }
 
 #country-name {
@@ -38,7 +38,7 @@ body {
 
 img {
   display: block;
-  width: 540px;
+  max-width: 320px;
   height: auto;
   margin-left: 50px;
 }
